--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
-    "mongoose": "^8.10.2"
+    "mongoose": "^8.10.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^22.13.5",
